# claude-config-template

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLAUDE_MD_QUICKSTART.md  CODEGRAPH_RELEASE_NOTES.md  HOOK_ERRORS_FIX.md  INSTALLATION.md  MIGRATION_NOTES.md  MIGRATION_SUMMARY.md  PLUGIN_AGENT_GUIDE.md  QUICKSTART.md  README.md  install.sh  package.json  pnpm-lock.yaml  pyproject.toml  settings.local.json  setup.sh
.claude/: .variables.json  CLAUDE.md.template  SLASH_COMMAND_ORCHESTRATION.md  settings.local.json
.claude/agents/configs/: performance-engineer.json  qa-expert.json
.claude/commands/: build.md  check-updates.md  fix.md  plan_w_docs.md  review.md  scout.md  scout_plan_build.md
.claude/hooks/: README.md  post-git-push.sh  pre-commit.sh  pre-request-router.sh  test-result.sh  tool-use.sh  user-prompt-submit.sh
.claude/scripts/: check-updates.sh  delegation-router.ts  inject-variables.sh  update-variables.sh
.github/: QUICK_START.md
.github/workflows/: README.md  auto-merge.yml  pr-tests.yml
agents/: delegation-map.json  mcp-mapping.json
commands/: commit-push-pr.md
commands/workflows/: auto-implement.md
docs/: AGENT_REFERENCE.md  BRANCH_PROTECTION.md  CLAUDE_MD_CONDENSED.md  DELEGATION.md  DEPLOYMENT.md  DEVELOPMENT.md  GLOBAL_AGENT_CLEANUP.md  MVP_QUICKSTART.md  MVP_STATUS.md  SETUP.md  TROUBLESHOOTING.md  WORKFLOWS.md
examples/configs/: default-config.yaml
hooks/: README.md  memory-guard.sh  post-milestone.sh
scripts/: delegation-router.ts  sync-from-template.sh  verify-agent-setup.sh
specs/001-okay-so-the/: spec.md
specs/001-okay-so-the/checklists/: requirements.md
specs/002-repository-code-graph/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-repository-code-graph/checklists/: requirements.md
specs/002-repository-code-graph/contracts/: cli-interface.md  indexer-api.yaml
src/code_graph/cli/: main.py
src/code_graph/config/: loader.py
src/code_graph/indexer/: main.py  (+2 more)
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_graph_builder.py  test_hybrid_scorer.py  test_relationship_extractor.py
(+34 files in other folders)
